--- a/index.html
+++ b/index.html
@@ -122,33 +122,6 @@
       margin-bottom: 1rem;
     }
 
-    /* Fir Tree Media Partnership */
-    .partner-section {
-      text-align: center;
-    }
-
-    .partner-section a {
-      color: var(--burnt-orange);
-      font-weight: 700;
-      text-decoration: none;
-    }
-
-    .partner-section a:hover {
-      text-decoration: underline;
-    }
-
-    .partner-logo img {
-      max-width: 180px;
-      height: auto;
-      margin-top: 1rem;
-      opacity: 0.9;
-      transition: opacity 0.3s ease;
-    }
-
-    .partner-logo img:hover {
-      opacity: 1;
-    }
-
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -187,6 +160,54 @@
       }
     }
   </style>
+  
+<!-- Fir Tree Media Partnership Styling -->
+<style>
+  .ftm-section {
+    background-color: #F5F5F0;
+    padding: 60px 20px;
+    text-align: center;
+  }
+
+  .ftm-container {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .ftm-heading {
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: #3E3E3E;
+  }
+
+  .ftm-text {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #3E3E3E;
+    max-width: 700px;
+    margin: 0 auto 30px auto;
+  }
+
+  .ftm-logo {
+    max-width: 220px;
+    margin-bottom: 25px;
+  }
+
+  .ftm-link {
+    display: inline-block;
+    background-color: #506B38;
+    color: #F5F5F0;
+    padding: 12px 24px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 4px;
+    transition: 0.3s ease;
+  }
+
+  .ftm-link:hover {
+    background-color: #D95E1F;
+  }
+</style>
 
   <script>
     window.addEventListener("scroll", () => {
@@ -228,7 +249,7 @@
 
 <script>
   const capacity = 125;
-  const currentEntries = 78;
+  const currentEntries = 77; // Update this number only
   const remaining = capacity - currentEntries;
   document.getElementById("remaining-spots").textContent = remaining;
 </script>
@@ -241,33 +262,123 @@
   <a href="#contact">Contact</a>
 </nav>
 
-<!-- (All existing content sections remain unchanged above this point) -->
+<section id="about"> <h2>What is a Backyard Ultra?</h2>
+  
+  <p> The Bristol Backyard Ultra is not a typical ultramarathon. 
+  It is a simple, relentless test of patience, pacing, and mental resolve, set within the historic parkland and
+  woodland trails of Blaise Castle Estate in Bristol — a premier location in the South West, close to the city, yet removed from it entirely. </p>
+  
+  <p> <strong>There is no finish line to chase, no target time, and no fixed distance.</strong> 
+  Just a loop, a bell, and one question asked again every hour: <em>can you go again?</em> </p>
+  
+  <p> The event follows the classic Backyard Ultra (Last One Standing) format. 
+  Runners complete a 4.167-mile (6.7 km) trail loop every hour, on the hour. 
+  You have 60 minutes to complete each loop. Finish early and you rest.
+  Finish late, or fail to make the start line when the bell rings, and your race is over. </p>
+  
+  <p> This repeats. Hour after hour. The event continues until only one runner remains. 
+  That final runner must complete one last solo loop to be crowned <strong>Last One Standing</strong>. </p>
+  
+  <p> Every other participant, regardless of the distance they cover, is recorded as a DNF. 
+  This is not a race about speed. It is about pacing, recovery, decision-making, and managing the mental challenge of repetition. </p>
+</section>
 
-<!-- Keep your existing About, Course, FAQ, Instagram, Community sections exactly as they were -->
+<section id="course"> <h2>The Course</h2>
+  
+<p> The course is 4.167-mile (6.7 km) long, and winds through the varied trails of <strong>Blaise Castle Estate</strong>, 
+combining woodland paths, babbling brooks and open parkland. Elevation varies between long flat section, gentle climbs and descents, and one killer hill to crush on your way up to the castle. </p> <p> The loop is fully marked and easy to follow,
+with no navigation required, allowing runners to focus solely on completing each lap and returning to the start before the next bell. </p>
+</section>
 
-<!-- INSERTED PARTNERSHIP SECTION -->
+<section id="faq">
+  <h2>Bristol Backyard Ultra – Frequently Asked Questions</h2>
 
-<section class="partner-section">
-  <h2>Official Media Partner</h2>
+  <p><strong>What is a Backyard Ultra?</strong><br>
+  A Backyard Ultra (also known as “Last One Standing”) is a unique endurance running format. Runners complete a 6.7km (4.167 mile) loop every hour, on the hour. You must finish each loop within the hour to be allowed to continue to the next one. The event continues until only one runner remains who completes a loop on their own.</p>
 
-  <p>
-    We’re proud to partner with 
-    <a href="https://firtreemedia.co.uk/" target="_blank" rel="noopener noreferrer">
-      Fir Tree Media
-    </a>, 
-    who will be producing the official Bristol Backyard Ultra aftermovie and delivering 
-    professional race-day media, social content and marketing support throughout the event.
-  </p>
+  <p><strong>Is this Backyard Ultra suitable for beginners?</strong><br>
+  Yes — absolutely. While some runners will aim to go deep into the event, many participants come with the goal of completing just a few loops. The Backyard Ultra format is uniquely beginner-friendly because you choose when to stop. There is no minimum distance requirement beyond completing a single loop, and no pressure to continue beyond what feels right for you.</p>
 
-  <p>
-    From first yard to final bell, Fir Tree Media will capture the grit, atmosphere 
-    and community that define the Backyard experience.
-  </p>
+  <p>This event is designed to be inclusive and welcoming. Whether your goal is one loop, five loops, or an all-day challenge, you’ll be supported and celebrated for taking part.</p>
 
-  <div class="partner-logo">
-    <a href="https://firtreemedia.co.uk/" target="_blank" rel="noopener noreferrer">
-      <img src="images/fir-tree-media-logo.png" 
-           alt="Fir Tree Media Logo">
+  <p><strong>Is this an official Backyard Ultra event?</strong><br>
+  Yes. This event follows the official Backyard Ultra (Last One Standing) format: a 6.7km loop, run every hour on the hour, until one runner remains. Timing, distances, and rules align with the internationally recognised Backyard Ultra standard.</p>
+
+  <p><strong>Where is the Backyard Ultra held?</strong><br>
+  The event takes place at Blaise Castle Estate in Bristol, South West England. The estate offers a varied and scenic setting, combining woodland trails, open fields, gentle climbs, and flatter runnable sections.</p>
+
+  <p><strong>What is the course like?</strong><br>
+  The looped course includes a mix of terrain: short hills, long flatter sections, woodland trails, and open fields. Runners can expect both single-track paths and wider, more open trail sections. The variety keeps the course interesting while remaining runnable and manageable across multiple loops.</p>
+
+  <p><strong>Do I have to keep running until there is one person left?</strong><br>
+  No. You are free to stop after any completed loop. Many runners treat a Backyard Ultra as a personal challenge rather than a competition. Once you decide to stop, your result is recorded as the number of full loops completed.</p>
+
+  <p><strong>Is this a competitive race?</strong><br>
+  While there is technically one winner, the event is community-focused and runner-led. The atmosphere is supportive rather than aggressive, with runners encouraging each other as the hours pass. Many participants value the shared experience as much as the physical challenge.</p>
+
+  <p><strong>What kind of runners take part?</strong><br>
+  Backyard Ultras attract a wide range of runners — from those new to ultra-distance running, to experienced endurance athletes aiming for long distances. You do not need to be an elite runner to take part; pacing, patience, and consistency matter far more than speed.</p>
+
+  <p><strong>Is there a time limit?</strong><br>
+  There is no fixed time limit. The event continues until only one runner completes a solo loop. Some runners may finish within a few hours, while others may continue overnight and beyond.</p>
+
+  <p><strong>Is this a UK-based Backyard Ultra?</strong><br>
+  Yes. This is a South West UK Backyard Ultra held in Bristol, making it easily accessible for runners across the region and beyond.</p>
+
+  <p><strong>Is this event compliant with UK Athletics rules?</strong><br>
+  Yes. This event is licenced by the TRA and will adhere to UK Athletics rules for trail running.</p>
+
+  <p><strong>What is the minimum age for entering this event?</strong><br>
+  As the event complies with UK Athletics rules for trail running, participants must be 20 or older on the day of the event.</p>
+
+  <p><strong>How do I enter?</strong><br>
+  Entry is via our official ticketing partner. Please visit the ticket link on this website for current availability and pricing.</p>
+</section>
+
+<section>
+  <div class="instagram-wrapper">
+    <blockquote class="instagram-media"
+      data-instgrm-permalink="https://www.instagram.com/gravelandgritevents/"
+      data-instgrm-version="14"
+      style="background:#FFF; border:0; max-width:540px;">
+    </blockquote>
+  </div>
+</section>
+
+<script async src="//www.instagram.com/embed.js"></script>
+
+<section id="community">
+  <h2>What You’ll Get</h2>
+  <ul>
+<li><strong>A professionally delivered Backyard Ultra, capped at 125 runners for a focused, well-supported founding year experience.</strong></li>
+<li><strong>Clearly marked 6.7km course with visible, friendly marshals — no navigation stress, no confusion.</strong></li>
+<li><strong>A large, organised basecamp with space for your own provisions and a calm 10am start.</strong></li>
+<li><strong>Hot and cold drinking water plus a solid selection of practical runner foods throughout the event.</strong></li>
+<li><strong>Plenty of toilets — no wasting precious minutes queuing between yards.</strong></li>
+<li><strong>Optional free recce run before race day to preview the course and build confidence.</strong></li>
+<li><strong>Thoughtful brand involvement to enhance the weekend experience.</strong></li>
+<li><strong>On-site cafés, play park and ample parking — making it easy for crew and family to settle in.</strong></li>
+<li><strong>A festival-style basecamp atmosphere including a dedicated “Crewless Crew” tent, decoration station and a few Backyard quirks.</strong></li>
+<li><strong>A unique DNF token — or the Last One Standing prize.</strong></li>
+  </ul>
+</section>
+
+  <!-- Fir Tree Media Partnership Section -->
+<section class="ftm-section">
+  <div class="ftm-container">
+    <h2 class="ftm-heading">Official Media Partner</h2>
+
+    <!-- Replace the src below with the correct path to your uploaded logo -->
+    <img src="images/fir-tree-media-logo.png" alt="Fir Tree Media Logo" class="ftm-logo">
+
+    <p class="ftm-text">
+      We’re proud to partner with Fir Tree Media, who will be producing the official event aftermovie for the Bristol Backyard Ultra. 
+      Their team will also be delivering social media content, marketing support, and on-the-day media coverage — capturing the grit, 
+      the atmosphere, and the stories that make this event special.
+    </p>
+
+    <a href="https://firtreemedia.co.uk/" target="_blank" class="ftm-link">
+      Visit Fir Tree Media
     </a>
   </div>
 </section>
